samples/_failures_safe/1761331417_752798_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55c7695e.c: In function ‘main’:
./samples/SAFE/__tmp_55c7695e.c:145:5: error: expected expression at end of input
  145 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_55c7695e.c:145:5: error: expected declaration or statement at end of input
